add create page

--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -21,6 +21,7 @@
                     <a class="nav-item nav-link" href="/">Glavnaja</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
                     <a class="nav-item nav-link active" th:href="@{/candidates}">Kandidaty</a>
+                    <a class="nav-item nav-link active" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
                 </div>
             </div>
         </div>
