add create candidat

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,8 @@
                     <a class="nav-item nav-link active" href="/">Glavnaja</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
+                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' kandidata</a>
                 </div>
             </div>
         </div>
@@ -39,6 +41,8 @@
         <ul>
             <li><a th:href="@{/vacancies}">Vakansii</a></li>
             <li><a th:href="@{/candidates}">Kandidaty</a></li>
+            <li><a th:href="@{/vacancies/create}">Sozdat' vakansiju</a></li>
+            <li><a th:href="@{/candidates/create}">Sozdat' kandidata</a></li>
         </ul>
     </div>
 </div>
