--- a/src/main/resources/templates/vacancies/create.html
+++ b/src/main/resources/templates/vacancies/create.html
@@ -41,7 +41,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/vacancies}">Otmena</a></div>
-                        <div class="col-6"><ink active" th:href="@{/ class="btn btn-primary w-100" type="submit">Sohranit'</button>
+                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Sohranit</button>
                         </div>
                     </div>
                 </div>
