--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -21,7 +21,8 @@
                     <a class="nav-item nav-link" href="/">Glavnaja</a>
                     <a class="nav-item nav-link active" th:href="@{/vacancies}">Vakansii</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
-                    <a class="nav-item nav-link active" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
+                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' kandidata</a>
                 </div>
             </div>
         </div>
