--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <div class="container mt-2">
-        <h3>Proekt job4j_dreamjob</h3>
+        <h3>Proekt job4j_dreamjob!!!</h3>
         <ul>
             <li><a th:href="@{/vacancies}">Vakansii</a></li>
             <li><a th:href="@{/candidates}">Kandidaty</a></li>
