--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -8,9 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
-    <title>Spisok vakansij</title>
+    <title>Oshibka</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -20,33 +19,16 @@
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" href="/">Glavnaja</a>
-                    <a class="nav-item nav-link active" th:href="@{/vacancies}">Vakansii</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' rezjume</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nazvanie</th>
-                    <th scope="col">Data sozdanija</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="vacancy: ${vacancies}">
-                    <td th:text="${vacancy.id}"/>
-                    <td><a th:text="${vacancy.title}" th:href="@{/vacancies/{vacancyId}(vacancyId=${vacancy.id})}"></a></td>
-                    <td th:text="${vacancy.creationDate}"/>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+        <h3 class="mt-3">Proizoshla oshibka</h3>
+        <p class="text-danger" th:text="${message}"></p>
     </div>
 </div>
 </body>
