--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -13,19 +13,7 @@
 </head>
 <body>
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jDreamJob</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/">Glavnaja</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
-                    <a class="nav-item nav-link active" th:href="@{/vacancies/create}">Sozdat' kandidata</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <form class="mt-3">
             <div class="mb-3">
@@ -48,6 +36,7 @@
             </div>
         </form>
     </div>
+    <footer th:insert="blocks/footer :: footer"></footer>
 </div>
 </body>
 </html>
