--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -13,20 +13,7 @@
 </head>
 <body>
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jDreamJob</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/">Glavnaja</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
-                    <a class="nav-item nav-link active" th:href="@{/candidates}">Kandidaty</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' kandidata</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <div class="row">
             <table class="table">
@@ -47,6 +34,7 @@
             </table>
         </div>
     </div>
+    <footer th:insert="blocks/footer :: footer"></footer>
 </div>
 </body>
 </html>
