--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -13,23 +13,12 @@
 </head>
 <body>
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jDreamJob</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/">Glavnaja</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <h3 class="mt-3">Proizoshla oshibka</h3>
         <p class="text-danger" th:text="${message}"></p>
     </div>
+    <footer th:insert="blocks/footer :: footer"></footer>
 </div>
 </body>
 </html>
