--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,20 +22,7 @@
 </head>
 <body>
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jDreamJob</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/">Glavnaja</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
-                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
-                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' kandidata</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <div class="container mt-2">
         <h3>Proekt job4j_dreamjob!!!</h3>
         <ul>
@@ -45,6 +32,7 @@
             <li><a th:href="@{/candidates/create}">Sozdat' kandidata</a></li>
         </ul>
     </div>
+    <footer th:insert="blocks/footer :: footer"></footer>
 </div>
 </body>
 </html>
