--- a/src/main/resources/templates/vacancies/create.html
+++ b/src/main/resources/templates/vacancies/create.html
@@ -24,6 +24,10 @@
                 <label for="description" class="form-label"><b>Opisanie</b></label>
                 <textarea class="form-control" id="description" name="description" rows="25" placeholder="Opishite trebovanija k kandidatu"></textarea>
             </div>
+            <div class="form-check mb-3">
+                <input type="checkbox" name="visible" class="form-check-input" id="visible">
+                <label class="form-check-label" for="visible">Opublikovat'</label>
+            </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
                 <div class="col-6">
