--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -19,12 +19,26 @@
 </head>
 <body>
 <div class="container-fluid p-0">
-    <header th:insert="blocks/header :: header"></header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/">Job4jDreamJob</a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="/">Glavnaja</a>
+                    <a class="nav-item nav-link active" th:href="@{/vacancies}">Vakansii</a>
+                    <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
+                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' rezjume</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <div class="row">
             <table class="table">
                 <thead>
                 <tr>
+                    <th><i class="bi bi-square"></i></th>
                     <th scope="col">#</th>
                     <th scope="col">Nazvanie</th>
                     <th scope="col">Data sozdanija</th>
@@ -32,16 +46,22 @@
                 </thead>
                 <tbody>
                 <tr th:each="vacancy: ${vacancies}">
-                    <td th:text="${vacancy.id}"/>
-                    <td><a th:text="${vacancy.title}" th:href="@{/vacancies/{vacancyId}(vacancyId=${vacancy.id})}"></a>
+                    <td>
+              <span th:if="${vacancy.visible}">
+                <i class="bi bi-check-square"></i>
+              </span>
+                        <span th:if="${!vacancy.visible}">
+                  <i class="bi bi-square"></i>
+              </span>
                     </td>
+                    <td th:text="${vacancy.id}"/>
+                    <td><a th:text="${vacancy.title}" th:href="@{/vacancies/{vacancyId}(vacancyId=${vacancy.id})}"></a></td>
                     <td th:text="${vacancy.creationDate}"/>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    <footer th:insert="blocks/footer :: footer"></footer>
 </div>
 </body>
 </html>
