--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -9,20 +9,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Sozdanie kandidata</title>
+    <title>Sozdanie resume</title>
 </head>
 <body>
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
-        <form class="mt-3">
+        <form class="mt-3" th:action="@{/candidates/create}" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label for="title" class="form-label"><b>Nazvanie</b></label>
-                <input type="text" class="form-control" id="title" placeholder="Predlagaja dolzhnost', naprimer, Vedushhij Java razrabotchik">
+                <label for="name" class="form-label"><b>Nazvanie</b></label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Napishete dolzhnost', naprimer, Vedushhij Java razrabotchik">
+            </div>
+            <div class="mb-3">
+                <label for="formFile"><b>Photo</b></label>
+                <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file" required>
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Opisanie</b></label>
-                <textarea class="form-control" id="description" rows="25" placeholder="Opishite vashe umenie"></textarea>
+                <textarea class="form-control" id="description" name="description" rows="25" placeholder="Opishite trebovanija k kandidatu"></textarea>
             </div>
             <div class="mb-3">
                 <label for="city"><b>Gorod</b></label>
@@ -35,7 +39,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/candidates}">Otmena</a></div>
-                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Sohranit</button>
+                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Sohranit'</button>
                         </div>
                     </div>
                 </div>
