--- a/src/main/resources/templates/candidates/one.html
+++ b/src/main/resources/templates/candidates/one.html
@@ -15,21 +15,34 @@
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
-        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}">
+        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}" enctype="multipart/form-data">
             <input type="hidden" name="id" th:field="*{id}">
-            <div class="mb-3">
-                <label for="name" class="form-label"><b>Imja</b></label>
-                <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Predlagaja dolzhnost', naprimer, Vedushhij Java razrabotchik">
+            <input type="hidden" name="fileId" th:field="*{fileId}">
+            <div class="row mb-3">
+                <div class="col-3">
+                    <div class="mb-3">
+                        <img th:src="@{/files/{fileId}(fileId=*{fileId})}" class="w-100" alt="No image">
+                    </div>
+                    <div class="mb-3">
+                        <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file">
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="mb-3">
+                        <label for="name" class="form-label"><b>Imja</b></label>
+                        <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Predlagaja dolzhnost', naprimer, Vedushhij Java razrabotchik">
+                    </div>
+                    <div class="mb-3">
+                        <label for="city"><b>Gorod</b></label>
+                        <select class="form-control" id="city" name="cityId">
+                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Opisanie</b></label>
-                <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25" placeholder="Opishite sebya"></textarea>
-            </div>
-            <div class="mb-3">
-                <label for="city"><b>Gorod</b></label>
-                <select class="form-control" id="city" name="cityId">
-                    <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>
-                </select>
+                <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25" placeholder="Opishite trebovanija k kandidatu"></textarea>
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
