--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,7 @@
             <li><a th:href="@{/candidates}">Kandidaty</a></li>
             <li><a th:href="@{/vacancies/create}">Sozdat' vakansiju</a></li>
             <li><a th:href="@{/candidates/create}">Sozdat' kandidata</a></li>
+            <li><a th:href="@{/users/register}">Registration</a></li>
         </ul>
     </div>
     <footer th:insert="blocks/footer :: footer"></footer>
