--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -32,6 +32,7 @@
                 </div>
                 <div class="d-flex">
                     <a class="nav-link text-secondary" th:href="@{/users/register}">Registraciya</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Vojti</a>
                 </div>
             </div>
         </div>
