--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -4,15 +4,19 @@
             <a class="navbar-brand" href="/">Job4jDreamJob</a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link" href="/">Glavnaja</a>
-                    <a class="nav-item nav-link active" th:href="@{/vacancies}">Vakansii</a>
+                    <a class="nav-item nav-link active" href="/">Glavnaja</a>
+                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' rezjume</a>
                 </div>
-                <div class="d-flex">
-                    <a class="nav-link text-secondary" th:href="@{/users/register}">Registraciya</a>
+                <div class="d-flex" th:if="${user.name == 'Gost'}">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registracija</a>
                     <a class="nav-link text-secondary" th:href="@{/users/login}">Vojti</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Gost'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Vyjti</a>
                 </div>
             </div>
         </div>
