--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,28 @@
 <body>
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
+<!--    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+<!--        <div class="container">-->
+<!--            <a class="navbar-brand" href="/">Job4jDreamJob</a>-->
+<!--            <div class="collapse navbar-collapse">-->
+<!--                <div class="navbar-nav me-auto">-->
+<!--                    <a class="nav-item nav-link active" href="/">Glavnaja</a>-->
+<!--                    <a class="nav-item nav-link" th:href="@{/vacancies}">Vakansii</a>-->
+<!--                    <a class="nav-item nav-link" th:href="@{/candidates}">Kandidaty</a>-->
+<!--                    <a class="nav-item nav-link" th:href="@{/vacancies/create}">Sozdat' vakansiju</a>-->
+<!--                    <a class="nav-item nav-link" th:href="@{/candidates/create}">Sozdat' rezjume</a>-->
+<!--                </div>-->
+<!--                <div class="d-flex" th:if="${user.name == 'Gost'}">-->
+<!--                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Registracija</a>-->
+<!--                    <a class="nav-link text-secondary" th:href="@{/users/login}">Vojti</a>-->
+<!--                </div>-->
+<!--                <div class="d-flex" th:if="${user.name != 'Gost'}">-->
+<!--                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>-->
+<!--                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Vyjti</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </nav>-->
     <div class="container mt-2">
         <h3>Proekt job4j_dreamjob!!!</h3>
         <ul>
